--- a/프로젝트 구현단계/project_reload/html/main.html
+++ b/프로젝트 구현단계/project_reload/html/main.html
@@ -95,7 +95,7 @@
     </style>
 <body>
                 <div class="section">
-                    <div class="card">
+                    <div class="card link_map" >
                         <img src="../img/lodgment.png" alt="숙소">
                         <h3>LODGMENT</h3>
                         <div class="card-content">
@@ -108,7 +108,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card link_map">
                         <img src="../img/food.jpg" alt="음식">
                         <h3>FOOD</h3>
                         <div class="card-content">
@@ -121,7 +121,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card link_map">
                         <img src="../img/tour.jpg" alt="관광">
                         <h3>TOURISM</h3>
                         <div class="card-content">
@@ -134,7 +134,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card link_map">
                         <img src="../img/activity.jpg" alt="활동">
                         <h3>ACTIVITY</h3>
                         <div class="card-content">
