--- a/프로젝트 구현단계/project_reload/작업물보관용/01. My-Page/My-Page-Landing.html
+++ b/프로젝트 구현단계/project_reload/작업물보관용/01. My-Page/My-Page-Landing.html
@@ -140,6 +140,32 @@
             sidebar.classList.toggle('expanded');
             sidebar.classList.toggle('collapsed-background');
         }
+        
+        function profilePhotoChange() {
+            let input = document.createElement("input");
+
+            input.type="file";
+            input.accept="image/*";
+
+            input.click();
+            input.onchange=function(event){
+                processFile(event.target.files[0]);
+            };
+        }
+
+        function processFile(file) {
+            let reader = new FileReader();
+            reader.readAsDataURL(file, "UTF-8");
+
+            reader.onload = function() {
+                let output = document.getElementById("output");
+                output.src = reader.result;
+            }
+        }
+
+        const gallery = document.querySelector(".gallery");
+
+    
     </script>
 </body>
 </html>
