--- a/프로젝트 구현단계/project_reload/html/My-Page-Withdrawal.html
+++ b/프로젝트 구현단계/project_reload/html/My-Page-Withdrawal.html
@@ -110,14 +110,14 @@
         span.onclick = function () {
             modal.style.display = "none";
             document.body.classList.remove("modal-open");
-            window.location.href = "../00. Login-Joining-Page/Login-Joining-Page.html";
+            window.location.href = "#";
         };
 
         window.onclick = function (event) {
             if (event.target == modal) {
                 modal.style.display = "none";
                 document.body.classList.remove("modal-open");
-                window.location.href = "../00. Login-Joining-Page/Login-Joining-Page.html";
+                window.location.href = "#";
             }
         };
 
