--- a/프로젝트 구현단계/project_ver4.5/02. Travel-Info-Page/Travel-Info-Page.html
+++ b/프로젝트 구현단계/project_ver4.5/02. Travel-Info-Page/Travel-Info-Page.html
@@ -146,17 +146,115 @@
                         </div>
                     </div>
                 </div>
-                <!-- Top 3 Section -->
-                <div class="top3Area">
-                    <div class="topHeaderArea d-flex justify-content-between align-items-center">
-                        <h1 id="title">TOP 3</h1>
-                        <a href="#" id="button">전체보기</a>
+                <div class="container">
+                    <div class="top3-area d-flex flex-column align-items-center" style="margin-left: -250px;">
+                        <!-- 배너 -->
+                        <div class="banner text-center mt-5 mb-5">
+                            <img src="../Element_Images/Top3-Travel-Area.gif" alt="top3-area" class="img-fluid">
+                        </div>
+                        <!-- 카드 섹션 -->
+                        <div class="card-container" style="max-width: 400px; width: 100%; height: 200px;">
+                            <!-- 카드 1 -->
+                            <div class="card" id="card1">
+                                <div id="carouselExampleIndicators1" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-indicators">
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    </div>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="../Element_Images/하늘자전거1.png" class="d-block w-100 fixed-height" alt="하늘자전거1">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../Element_Images/하늘자전거2.png" class="d-block w-100 fixed-height" alt="하늘자전거2">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../Element_Images/하늘자전거3.png" class="d-block w-100 fixed-height" alt="하늘자전거3">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                                <div class="card-body" style="text-align: center;">
+                                    <h5 class="card-title">☁️하늘 자전거☁️</h5>
+                                    <p class="card-text">☁️구름 위를 여행하는 것 같았어😚</p>
+                                </div>
+                            </div>
+                            <!-- 카드 2 -->
+                            <div class="card d-none" id="card2">
+                                <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-indicators">
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    </div>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="../Element_Images/강릉1.jpg" class="d-block w-100 fixed-height" alt="강릉1">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../Element_Images/강릉2.jpg" class="d-block w-100 fixed-height" alt="강릉2">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../Element_Images/강릉3.jpg" class="d-block w-100 fixed-height" alt="강릉3">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../Element_Images/강릉4.jpg" class="d-block w-100 fixed-height" alt="강릉4">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                                <div class="card-body" style="text-align: center;">
+                                    <h5 class="card-title">국내여행지 뿌시기👊프로젝트 in【강 릉】</h5>
+                                    <p class="card-text">시~원한 바다🌊가 있는<br>강릉으로 떠난 날😎</p>
+                                </div>
+                            </div>
+                            <!-- 카드 3 -->
+                            <div class="card d-none" id="card3">
+                                <div id="carouselExampleIndicators3" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-indicators">
+                                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    </div>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="../Element_Images/전주1.jpg" class="d-block w-100 fixed-height" alt="전주1">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="../Element_Images/전주2.jpg" class="d-block w-100 fixed-height" alt="전주2">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                                <div class="card-body" style="text-align: center;">
+                                    <h5 class="card-title">국내여행지 뿌시기👊프로젝트 in 【전 주】</h5>
+                                    <p class="card-text">아름다운 자연경관들과 고풍스러운 한옥들이<br>즐비한 전주</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <ul class="d-flex justify-content-around w-100" id="top3Ul">
-                        <li class="d-flex flex-column align-items-center" id="card"><img src="../Element_Images/Card-Example-Image.jpg" alt="" id="img"><span id="info">TOP 1</span></li>
-                        <li class="d-flex flex-column align-items-center" id="card"><img src="../Element_Images/Card-Example-Image.jpg" alt="" id="img"><span id="info">TOP 2</span></li>
-                        <li class="d-flex flex-column align-items-center" id="card"><img src="../Element_Images/Card-Example-Image.jpg" alt="" id="img"><span id="info">TOP 3</span></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -222,6 +320,43 @@
                 recommendList.appendChild(li);
             });
         });
+
+        // 카드를 슬라이드할 때 다음 카드로 전환하는 함수
+        function switchToNextCard(currentCardId, nextCardId) {
+            document.getElementById(currentCardId).classList.add('d-none');
+            document.getElementById(nextCardId).classList.remove('d-none');
+        }
+
+        // 카드 1의 슬라이드 종료 이벤트 감지
+        var carousel1 = document.getElementById('carouselExampleIndicators1');
+        carousel1.addEventListener('slid.bs.carousel', function (event) {
+            if (event.to === event.relatedTarget.parentNode.children.length - 1) {
+                setTimeout(function() {
+                    switchToNextCard('card1', 'card2');
+                }, 2000); // 2초 후에 다음 카드로 전환
+            }
+        });
+
+        // 카드 2의 슬라이드 종료 이벤트 감지
+        var carousel2 = document.getElementById('carouselExampleIndicators2');
+        carousel2.addEventListener('slid.bs.carousel', function (event) {
+            if (event.to === event.relatedTarget.parentNode.children.length - 1) {
+                setTimeout(function() {
+                    switchToNextCard('card2', 'card3');
+                }, 2000); // 2초 후에 다음 카드로 전환
+            }
+        });
+
+        // 카드 3의 슬라이드 종료 이벤트 감지
+        var carousel3 = document.getElementById('carouselExampleIndicators3');
+        carousel3.addEventListener('slid.bs.carousel', function (event) {
+            if (event.to === event.relatedTarget.parentNode.children.length - 1) {
+                setTimeout(function() {
+                    switchToNextCard('card3', 'card1');
+                }, 2000); // 2초 후에 다음 카드로 전환
+            }
+        });
+
         // 카카오 맵 스크립트
         var mapContainer = document.getElementById('kakaoMap'),
             mapOption = { 
