--- a/프로젝트 구현단계/project_reload/html/main.html
+++ b/프로젝트 구현단계/project_reload/html/main.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="card link_map">
-                        <img src="../img/food.jpg" alt="음식">
+                        <img src="../img/food.png" alt="음식">
                         <h3>FOOD</h3>
                         <div class="card-content">
                             <p>FOOD</p>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="card link_map">
-                        <img src="../img/tour.jpg" alt="관광">
+                        <img src="../img/tourism.png" alt="관광">
                         <h3>TOURISM</h3>
                         <div class="card-content">
                             <p>TOURISM</p>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="card link_map">
-                        <img src="../img/activity.jpg" alt="활동">
+                        <img src="../img/activity.png" alt="활동">
                         <h3>ACTIVITY</h3>
                         <div class="card-content">
                             <p>ACTIVITY</p>
