240717 김대휘 사이드바 템플릿 수정
사이드바 너비 및 Setting 버튼 -> logout 버튼으로 변경

--- a/04. Comma/html/sidebar-test.html
+++ b/04. Comma/html/sidebar-test.html
@@ -20,7 +20,7 @@
                 <button>Travel Information</button>
                 <button>Card Board</button>
                 <button>My Page</button>
-                <button>Setting</button>
+                <button id="logout">Logout</button>
             </div>
             <div class="sidebar-footer">
                 <p>Tel.&nbsp;&nbsp;000-0000-0000</p>
@@ -33,9 +33,13 @@
         </div>
         <!-- ⚠️⚠️⚠️ 이 밑 부분 (content 부분)만 수정하세요. ⚠️⚠️⚠️ -->
         <!-- ⚠️⚠️⚠️ 이 밑 부분 (content 부분)만 수정하세요. ⚠️⚠️⚠️ -->
-        <!-- ⚠️⚠️⚠️ 이 밑 부분 (content 부분)만 수정하세요. ⚠️⚠️⚠️ -->
+        <!-- 👇👇👇 이 밑 부분 (content 부분)만 수정하세요. 👇👇👇 -->
         <div class="content">
+
         </div>
+        <!-- 👆👆👆 윗 부분 (content 부분)만 수정하세요. 👆👆👆 -->
+        <!-- ⚠️⚠️⚠️ 윗 부분 (content 부분)만 수정하세요. ⚠️⚠️⚠️ -->
+        <!-- ⚠️⚠️⚠️ 윗 부분 (content 부분)만 수정하세요. ⚠️⚠️⚠️ -->
     </div>
 </body>
 </html>
