--- a/04. Comma/240724 김대휘/html/board-all-function.html
+++ b/04. Comma/240724 김대휘/html/board-all-function.html
@@ -7,15 +7,15 @@
     <!-- js link -->
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/board.js"></script>
-    <script src="../js/board-modal.js"></script>
-    <script src="../js/test.js"></script>
+    <script src="../js/board-view-modal.js"></script>
+    <script src="../js/board-all-function.js"></script>
     <!-- bootstrap5 link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- style css link -->
     <link rel="stylesheet" href="../css/sidebar-template.css">
     <link rel="stylesheet" href="../css/board.css">
-    <link rel="stylesheet" href="../css/board-modal.css">
+    <link rel="stylesheet" href="../css/board-view-modal.css">
 </head>
 <body>
     <div class="wrap">
@@ -47,7 +47,7 @@
             <div class="card-box" id="cardContainer">
             </div>
         </div>
-        <div id="modal" class="board-modal" style="opacity: 0; z-index: -1;">
+        <div id="view-modal" class="board-modal" style="opacity: 0; z-index: -1;">
             <div class="modal-box">
                 <div class="modal-img">
                     <button class="slide-button prev">&#10094;</button>
