--- a/04. Comma/240722 이주성/html/mypage-main.html
+++ b/04. Comma/240722 이주성/html/mypage-main.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>반응형 레이아웃</title>
         <!-- js link -->
-        <script rel="stylesheet" href="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/jquery-3.7.1.min.js"></script>
         <!-- bootstrap5 link -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -46,66 +46,83 @@
             <!-- 👇👇👇 이 밑 부분 (content 부분)만 수정하세요. 👇👇👇 -->
             <div class="content">
                 <div id="mp_content_flexbox">
-                    <div>
-                        <div>
-                            <img src="" alt="프로필사진" />
+                    <div id="mp_content_flexbox_left">
+                        <div id="mp_profile_box">
+                            <img onclick="change_profile()" id="mp_profile" src="../img/프로필 사진.jpg" alt="프로필사진" />
                         </div>
-                        <div>
-                            <ul>
+                        <div id="pick_box">
+                            <ul id="pick_box_ul">
                                 <li>
-                                    <img src="" alt="픽한게시물" />
-                                    <a href=""><p>픽한게시물</p></a>
+                                    <img id="mp_heart_icon" src="../img/픽한 게시물 heart_icon.svg" alt="픽한게시물" />
+                                    <a id="mp_pickboard_text" href="javascript:void(0)">픽한 게시물</a>
+                                        <!-- Overlay -->
+                                    <div id="mp_pickboard_overlay"></div>
+
+                                    <!-- Popup -->
+                                    <div id="mp_pickboard_popup">
+                                        <div id="mp_pickboard_popup-header">
+                                            <button id="mp_pickboard_close-popup">X</button>
+                                        </div>
+                                        <div id="popup-content">
+                                            <div class="popup-gallery">
+                                                <img src="../img/픽한 게시물1.jpg" alt="Image 1">
+                                                <img src="../img/픽한 게시물2.jpg" alt="Image 2">
+                                                <img src="../img/픽한 게시물3.jpg" alt="Image 3">
+                                                <img src="../img/픽한 게시물4.jpg" alt="Image 4">
+                                                <img src="../img/픽한 게시물5.jpg" alt="Image 5">
+                                                <img src="../img/픽한 게시물6.jpg" alt="Image 6">
+                                                <img src="../img/픽한 게시물7.jpg" alt="Image 7">
+                                                <img src="../img/픽한 게시물8.jpg" alt="Image 8">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li>
-                                    <img src="" alt="픽한장소" />
-                                    <a href=""><p>픽한장소</p></a>
+                                    <img id="mp_pin_icon" src="../img/픽한 장소 pin_icon.svg" alt="픽한장소" />
+                                    <a href=""><p>픽한 장소</p></a>
                                 </li>
                             </ul>
                         </div>
-                        <div>
+                        <div id="mp_my_travel_grade_box">
                             <a href=""><p>내 여행 등급</p></a>
-                            <img src="" alt="내여행등급(1단계)" />
+                            <img id="mp_baggage_icon" src="../img/내 여행 등급 baggage_icon.svg" alt="내여행등급(1단계)" />
                         </div>
                         <div id="mp_messagebox">
-                            <img src="icon1.svg" alt="아이콘" class="icon" />
                             <span class="message">상태 메시지: 메시지를 클릭하여 수정하세요.</span>
                         </div>
                         <div class="overlay" id="mp_status_overlay"></div>
                         <!-- 오버레이 -->
                         <div class="popup" id="mp_status_popup">
-                            <div class="input-area">
-                                <label for="icon-select">아이콘 선택:</label>
-                                <select id="icon-select">
-                                    <option value="icon1.svg">아이콘 1</option>
-                                    <option value="icon2.svg">아이콘 2</option>
-                                    <option value="icon3.svg">아이콘 3</option>
-                                </select>
-                                <br />
-                                <label for="message-input">메시지 입력:</label>
-                                <input type="text" id="message-input" placeholder="상태 메시지를 입력하세요" />
+                            <div>
+                                <div id="close-mp_status_popup_btn">
+                                    <img id="close-mp_status_popup" src="../img/닫기 icon.svg" alt="닫기">
+                                </div>
+                                <textarea id="message-input" rows="15" maxlength="300" placeholder="상태 메시지를 입력하세요"></textarea>
                             </div>
-                            <button id="apply-message">적용</button>
-                            <button id="close-mp_status_popup">닫기</button>
+                            <img id="apply-message" src="../img/업로드 icon.svg" alt="업로드">
                         </div>
                     </div>
-                    <div>
+                    <div id="mp_content_flexbox_right">
                         <div id="mp_header_text">
                             <div>
                                 <a href=""><p>게시물</p></a>
-                                <a href="">게시물 개수</a>
+                                <a href="">11</a>
                             </div>
                             <div>
                                 <a href=""><p>여행기록</p></a>
-                                <a href=""><p>여행기록 개수</p></a>
+                                <a href="">3</a>
                             </div>
                             <div>
                                 <a href=""><p>예약내역</p></a>
-                                <a href=""><p>예약내역 개수</p></a>
+                                <a href="">1</a>
                             </div>
                         </div>
-                        <div id="mp_board_gridbox" class="grid-container" id="grid-container">
-                            <a id="add-post-button" href=""><img src="" alt="게시물추가" /></a>
-                            <div class="grid-container" id="grid-container"></div>
+                        <div>
+                            <div id="add-post-button">
+                                <img src="../img/new_board_icon.svg" alt="게시물추가"/>
+                            </div>
+                            <div class="grid-container" id="mp_grid-container"></div>
+                            <div id="posts-container"></div>
                             <div class="overlay" id="new_board_overlay"></div>
                             <div class="popup" id="new_board_popup">
                                 <h2>게시물 추가</h2>
@@ -122,6 +139,9 @@
                                 <button id="register-button">등록</button>
                                 <button id="close-new_board_popup">닫기</button>
                             </div>
+                        </div>
+                        <div>
+
                         </div>
                     </div>
                 </div>
