--- a/04. Comma/240722 이주성/html/mypage-main.html
+++ b/04. Comma/240722 이주성/html/mypage-main.html
@@ -55,31 +55,69 @@
                                 <li>
                                     <img id="mp_heart_icon" src="../img/픽한 게시물 heart_icon.svg" alt="픽한게시물" />
                                     <a id="mp_pickboard_text" href="javascript:void(0)">픽한 게시물</a>
-                                        <!-- Overlay -->
+                                    <!-- Overlay -->
                                     <div id="mp_pickboard_overlay"></div>
 
                                     <!-- Popup -->
                                     <div id="mp_pickboard_popup">
                                         <div id="mp_pickboard_popup-header">
-                                            <button id="mp_pickboard_close-popup">X</button>
+                                            <div id="mp_pickboard_popup-header-title">
+                                                <img src="../img/픽한 게시물 heart_icon.svg" alt=""><h5>픽한 게시물</h5>
+                                            </div>
+                                            <button id="mp_pickboard_close-popup"><img src="../img/닫기 icon.svg" alt="닫기버튼"></button>
                                         </div>
-                                        <div id="popup-content">
-                                            <div class="popup-gallery">
-                                                <img src="../img/픽한 게시물1.jpg" alt="Image 1">
-                                                <img src="../img/픽한 게시물2.jpg" alt="Image 2">
-                                                <img src="../img/픽한 게시물3.jpg" alt="Image 3">
-                                                <img src="../img/픽한 게시물4.jpg" alt="Image 4">
-                                                <img src="../img/픽한 게시물5.jpg" alt="Image 5">
-                                                <img src="../img/픽한 게시물6.jpg" alt="Image 6">
-                                                <img src="../img/픽한 게시물7.jpg" alt="Image 7">
-                                                <img src="../img/픽한 게시물8.jpg" alt="Image 8">
+                                        <div id="mp_popup_content">
+                                            <div class="checkbox-container">
+                                                <label id="mp_popup_content_checkbox">
+                                                    <div>
+                                                        <input type="checkbox" id="select-all">
+                                                        <span>전체선택</span>
+                                                    </div>
+                                                    <div>
+                                                        <img src="../img/delete_icon.svg" alt="삭제버튼">
+                                                    </div>
+                                                </label>
+                                            </div>
+                                            <div class="mp_popup_gallery">
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물1.jpg" alt="Image 1">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물2.jpg" alt="Image 2">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물3.jpg" alt="Image 3">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물4.jpg" alt="Image 4">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물5.jpg" alt="Image 5">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물6.jpg" alt="Image 6">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물7.jpg" alt="Image 7">
+                                                </div>
+                                                <div class="mp_checkbox">
+                                                    <input type="checkbox" class="item-checkbox">
+                                                    <img src="../img/픽한 게시물8.jpg" alt="Image 8">
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <img id="mp_pin_icon" src="../img/픽한 장소 pin_icon.svg" alt="픽한장소" />
-                                    <a href=""><p>픽한 장소</p></a>
+                                    <a href="">픽한 장소</a>
                                 </li>
                             </ul>
                         </div>
@@ -105,15 +143,15 @@
                     <div id="mp_content_flexbox_right">
                         <div id="mp_header_text">
                             <div>
-                                <a href=""><p>게시물</p></a>
+                                <a href="">게시물</a><br>
                                 <a href="">11</a>
                             </div>
                             <div>
-                                <a href=""><p>여행기록</p></a>
+                                <a href="">여행기록</a><br>
                                 <a href="">3</a>
                             </div>
                             <div>
-                                <a href=""><p>예약내역</p></a>
+                                <a href="">예약내역</a><br>
                                 <a href="">1</a>
                             </div>
                         </div>
@@ -121,23 +159,16 @@
                             <div id="add-post-button">
                                 <img src="../img/new_board_icon.svg" alt="게시물추가"/>
                             </div>
-                            <div class="grid-container" id="mp_grid-container"></div>
-                            <div id="posts-container"></div>
-                            <div class="overlay" id="new_board_overlay"></div>
-                            <div class="popup" id="new_board_popup">
-                                <h2>게시물 추가</h2>
-                                <input type="file" id="representative-image" accept="image/*" />
-                                <div>
-                                    <textarea
-                                        id="post-text"
-                                        placeholder="게시물 내용을 입력하세요"
-                                        rows="4"
-                                        style="width: 100%"
-                                    ></textarea>
-                                </div>
-                                <input type="file" id="additional-images" multiple accept="image/*" />
-                                <button id="register-button">등록</button>
-                                <button id="close-new_board_popup">닫기</button>
+                            <div id="mp_grid-container">
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진1.jpg" alt="이미지 1"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진2.jpg" alt="이미지 2"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진3.jpg" alt="이미지 3"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진4.jpg" alt="이미지 4"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진5.jpg" alt="이미지 5"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진6.jpg" alt="이미지 6"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진7.jpg" alt="이미지 7"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진8.jpg" alt="이미지 8"></div>
+                                <div class="grid-item"><img src="../img/mp_gridbox 사진9.jpg" alt="이미지 9"></div>
                             </div>
                         </div>
                         <div>
